# TodoList

./: CMakeLists.txt  README.md  app_en.ts  app_ru.ts  main.cpp  update_translations.bat
Core/: IFilter.h  IFiltered.h  IPoolableObject.h  filterchain.cpp  filterchain.h  objectpool.h  poolablewidget.cpp  poolablewidget.h
Forms/: textwindow.cpp  textwindow.h  textwindow.ui
Serialization/: IFileActionsHandler.h  IReadWriteable.h  JsonSerializer.h  dataclass.cpp  dataclass.h  jsondataserializer.cpp  jsondataserializer.h  textbuttoneditdata.cpp  textbuttoneditdata.h
Styles/: style.qss
UI/: IDateTimeDataProvider.h  ITextDataProvider.h  contextmenuactions.cpp  contextmenuactions.h  datetimefilter.cpp  datetimefilter.h  dragdropmanager.cpp  dragdropmanager.h  markdownhighlighter.cpp  markdownhighlighter.h  textfactory.cpp  textfactory.h  textfilter.cpp  textfilter.h
Widgets/: textbuttonedit.cpp  textbuttonedit.h
